enhance css file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="fixed top-1.5 rtl:right-0 ltr:left-0 z-[1000] w-full " id="header-top">
 
-        <div class="desktop-nav nab-back w-full py-3">
+        <div class="desktop-nav nab-back w-full py-2.5">
             <div class="container">
                     <div class="flex items-center justify-between">
 
@@ -126,7 +126,7 @@
             </div>
         </div>
 
-          <div class="mobile-nav nab-back w-full py-3">
+          <div class="mobile-nav nab-back w-full py-2.5">
             <div class="container">
                 <div>
 
@@ -253,7 +253,7 @@
 
         <div class="w-full h-full container">
             <div class="landing-home__inner-container w-full h-full flex justify-center flex-col">
-                <div class="text-white max-w-[780px] banner-landing-page">
+                <div class="text-white max-w-[780px] banner-landing-page mt-5">
                     <h1 class="text-[3.5rem] leading-[1.2] font-semibold">
                         تقديم أفضل الحلول التقنية والبرمجية
                     </h1>
@@ -262,7 +262,7 @@
                     </p>
                 </div>
 
-                <div class="flex items-center gap-3 container-btn">
+                <div class="flex items-center gap-3 container-btn mt-5">
                     <a href="#" class="btn bg-[#fdd700] text-black">
                         اعرف المزيد
                     </a>
