working on main page

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 
         <!-- section 3 company services  -->
 
-        <section class="py-20 bg-[#f6f6f6] min-h-dvh">
+        <section class="py-20 px-3 bg-[#f6f6f6] min-h-dvh sm:px-0">
             <div class="container">
                 <div>
                     <div class="mb-12">
