--- a/index.html
+++ b/index.html
@@ -1142,18 +1142,101 @@ href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
                                         <p></p>
                                     </div>
                 
-                                    <div class="statistics-container relative flex items-center">
+                                    <div class="statistics-container relative flex flex-col min-991px:flex-row items-center gap-10 min-991px:gap-8">
 
-                                        <div>
+                                        <div class="flex flex-col justify-between items-start self-stretch flex-[30%]">
                                             <div>
-                                                <h3>احصائيات عن أوتِك</h3>
-                                                <p>من خلال عملنا في السوق اليمني لعدة سنوات ، أوتِك تجاوزت العديد من الأنجازات.</p>
+                                                <h3 class="text-2xl text-[#181b22] mb-2">احصائيات عن أوتِك</h3>
+                                                <p class="text-base leading-7 text-[gray]">من خلال عملنا في السوق اليمني لعدة سنوات ، أوتِك تجاوزت العديد من الأنجازات.</p>
                                             </div>
-                                            <a href="#">
+                                            <a href="#" class="btn bg-[#ffc221] mt-9 min-991px:mt-0">
                                                 اعرف المزيد
                                             </a>
                                         </div>
-                                        <div></div>
+
+                                        <div class="flex items-center justify-between w-full flex-col gap-8 min-578px:gap-0 min-578px:flex-row min-991px:flex-[70%] flex-[100%]">
+
+                                            <div class="flex items-center justify-center flex-col gap-6">
+                                                <div class="w-40 h-40 rounded-full flex items-center justify-center relative">
+
+                                                    <svg
+                                                    width="100%"
+                                                    height="100%"
+                                                    viewBox="0 0 250 250"
+                                                    class="circular-progress circular-progress-color absolute"
+                                                    style="--progress: 40"
+                                                 >
+                                                    <circle class="bg"></circle>
+                                                    <circle class="fg"></circle>
+                                                 </svg>
+
+                                                    <div class="w-[120px] h-[120px] rounded-full border border-solid border-[#d8d8d8] flex items-center justify-center">
+                                                        <span class="text-[27px] text-[#212122] font-medium">
+                                                            20+
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                                <h4 class="text-[#f1556b] text-lg font-medium">
+                                                    المواقع اللتي نديرها
+                                                </h4>
+                                            </div>
+
+
+                                            <div class="flex items-center justify-center flex-col gap-6">
+                                                <div class="w-40 h-40 rounded-full flex items-center justify-center relative">
+
+                                                    <svg
+                                                    width="100%"
+                                                    height="100%"
+                                                    viewBox="0 0 250 250"
+                                                    class="circular-progress circular-progress-color absolute"
+                                                    style="--progress: 65"
+                                                 >
+                                                    <circle class="bg"></circle>
+                                                    <circle class="fg"></circle>
+                                                 </svg>
+
+                                                    <div class="w-[120px] h-[120px] rounded-full border border-solid border-[#d8d8d8] flex items-center justify-center">
+                                                        <span class="text-[27px] text-[#212122] font-medium">
+                                                            65+
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                                <h4 class="text-[#f1556b] text-lg font-medium">
+                                                    المشاريع المنجزة
+                                                </h4>
+                                            </div>
+
+
+                                            <div class="flex items-center justify-center flex-col gap-6">
+                                                <div class="w-40 h-40 rounded-full flex items-center justify-center relative">
+
+                                                    <svg
+                                                    width="100%"
+                                                    height="100%"
+                                                    viewBox="0 0 250 250"
+                                                    class="circular-progress circular-progress-color absolute"
+                                                    style="--progress: 80"
+                                                 >
+                                                    <circle class="bg"></circle>
+                                                    <circle class="fg"></circle>
+                                                 </svg>
+
+                                                    <div class="w-[120px] h-[120px] rounded-full border border-solid border-[#d8d8d8] flex items-center justify-center">
+                                                        <span class="text-[27px] text-[#212122] font-medium">
+                                                            50+
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                                <h4 class="text-[#f1556b] text-lg font-medium">
+                                                    عملاء مسرورين
+                                                </h4>
+                                            </div>
+
+
+
+
+                                        </div>
 
                                     </div>
                                 </div>
