working on main page

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
         <!-- section 2 paragraph about the company  -->
 
         <!-- <section class="py-20 bg-[#f6f6f6] min-h-dvh"> -->
-        <section class="py-20 bg-white min-h-dvh">
+        <section class="py-20 bg-white">
             <div class="container">
                 <div class="flex flex-col-reverse items-center gap-10 min-991px:flex-row">
                     <div class="w-full leading-[1.5] min-991px:w-[60%] px-4 sm:px-0 ">
@@ -511,7 +511,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
 
         <!-- section 3 company services  -->
         
-        <section class="py-20 px-3 bg-[#f6f6f6] min-h-dvh sm:px-0">
+        <section class="py-20 px-3 bg-[#f6f6f6] sm:px-0">
             <div class="container">
                 <div>
                     <div class="mb-12">
@@ -569,7 +569,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
         <!-- section 4 steps to our service with client  -->
 
 
-        <section class="py-20 px-3 bg-white min-h-dvh sm:px-0">
+        <section class="py-20 px-3 bg-white sm:px-0">
             <div class="container">
                 <div>
                     <div class="mb-12">
@@ -854,7 +854,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
 
         <!-- section 5 company works  -->
         
-                <section class="py-20 px-3 bg-[#f6f6f6] min-h-dvh sm:px-0">
+                <section class="py-20 px-3 bg-[#f6f6f6] sm:px-0">
                     <div class="container">
                         <div>
                             <div class="mb-12">
